client/app/controllers/formshow/formshow.less
@wiz-bg: #efefea;
@wiz-line-bg: #CDCDCD;
@wiz-bubble-bg: #AAB2BD;
@wiz-bubble-text: #E6E9ED;
@wiz-bubble-active-bg: #37BC9B;
@wiz-acitve-text: #434A54;


// @wiz-bg: #80CCED;
// @wiz-line-bg: #6BB8DA;
// @wiz-bubble-bg: #E9573F;

// @wiz-bubble-text: #E6E9ED;
// @wiz-acitve-text: #fff;


.form-show {

  margin-bottom: 100px;

  .form-show-container {
    position: relative;
  }

  .section-points {
    position: absolute;
    top: -39px;
    border-radius: 0;
    background: @wiz-bg;
    color: #777;
    right: 0px;
    padding: 7px 14px;
    border-radius: 0 0 5px 5px;
  }

  .inputLabel {
    label {
      font-weight: normal;
      margin-bottom: 10px;
      margin-left: 6px;
      margin-top: 5px;
      display: inline-block;
    }
  }

  .form-group {
    > label {
      font-size: 18px;
      margin-bottom: 5px;
      font-weight: 500;
    }
    margin-bottom: 30px;
  }

  .help-block {
    font-size: 12px;
  }

  select {
    max-width: 300px;
  }

  .prev-field-label  {
    font-size: 20px;
    font-weight: 300;
    color: #666;
  }

}

.form-meta-container {
  margin: 0 auto;
  max-width: 940px;
}

.form-meta {
  margin: -30px -15px 30px;
  overflow: hidden;
  padding: 15px;
}

.form-title {
  h1 {
    font-size: 24px;
    margin: 0;
    line-height: 50px;
  }
}

.form-show-container {
  max-width: 900px;
  margin: 0 auto;
}


.form-sections {
  background: @wiz-bg;
  overflow: hidden;
  margin: -30px -20px 20px;
  padding: 22px;
  //border-bottom: solid 1px #eee;
  position: relative;
  &:before {
    content: '';
    display: block;
    top: 37.5px;
    left: 20px;
    right: 20px;
    height: 1px;
    background: @wiz-line-bg;
    position: absolute;
    z-index: 1;
  }

}

.wiz {
  counter-reset: wizCounter;
  position: relative;
  margin: 0;
  padding: 0;

  li {
    display: inline-block;
    float: left;
    cursor: pointer;
    counter-increment: wizCounter;
    margin-right: 20px;
    z-index: 3;
    position: relative;
    min-width: 40px;
    min-height: 30px;
    height: 30px;

    span {
      display: inline-block;
      width: 0px;
      overflow: hidden;
      height: 30px;
      padding: 6px 0 6px 0;
      word-wrap: break-word;
      text-overflow: ellipsis;
      white-space: nowrap;
      transition: all 0.3s ease-in;
      -webkit-transition: all 0.3s ease-in;
    }

    &.active {
      transition: all 0.3s ease-in;
      -webkit-transition: all 0.3s ease-in;
      height: 30px;

      span {
        display: inline-block;
        width: auto;
        height: auto;
        margin-left: 40px;
        font-size: 14px;
        color: #888;
        background: @wiz-bg;
        opacity: 1;
        padding: 5px 5px;
        color: @wiz-acitve-text;
        transition: all 0.3s linear;
        -webkit-transition: all 0.3s linear;
      }
      &:before {
        background: @wiz-bubble-active-bg;
        color: #fff;
      }
      &:after {
        content: '';
        position: absolute;
        border: solid 10px;
        width: 0;
        height: 0;
        border-color: transparent transparent #fff;
        bottom: -22px;
        left: 3px;
        transition: all 0.3s ease-in;
        -webkit-transition: all 0.3s ease-in;
      }
    }

    &:before {
      content: counter(wizCounter);
      height: 30px;
      width: 30px;
      line-height: 30px;
      border-radius: 100%;
      color: @wiz-bubble-text;
      background: @wiz-bubble-bg;
      display: block;
      text-align: center;
      position: absolute;
    }
  }
}

@tip-background: #AC92EC;
@tip-border-color: #967ADC;

.inputLabel {
  .popover.right {
    margin-left: 17px;
    margin-top: 5px;
    background: @tip-background;
    box-shadow: none;
    border: solid 1px @tip-border-color;
    color: #fff;
    font-weight: 300;
    > .arrow {
      border-right-color: @tip-border-color;
      &:after {
        border-right-color: @tip-background;
      }
    }
  }
}

.points-gained {
  font-size: 32px;
  line-height: 1;
  font-weight: bold;
}

.total-point {
  font-size: 20px;
  color: #888;
}


.certificate {
  height: 612px;
  width: 792px;
  box-shadow: 0 0 8px #eee;
  margin: 30px auto;
  padding: 20px;
  box-shadow: 0 0 15px #D7D7D7;
  position: relative;
}
.certificate-heading {
  text-align: center;
  font-weight: 300;
}

.certificate-body {
  margin-top: 30px;
  margin-bottom: 30px;
  min-height: 250px;
}

.certificate-logo {
  width: 40%;
  float: left;
  text-align: center;
}

.certificate-logo img {
  height: 250px;
}

.certificate-content {
  width: 55%;
  float: left;
  text-align: center;
  font-size: 22px;
  margin-top: 30px;
  color: #888;
  font-weight: 300;
}

.certificate-name {
  display: block;
  color: #43434a;
  font-size: 30px;
  border-bottom: solid 1px #43434A;
  margin: 10px 0;
}

.certificate-footer {
  clear: both;
  margin-top: 50px;
}

.certificate-sign {
  width: 50%;
  text-align: center;
  float: left;
}

.certificate-sign img {
  width: 250px;
  display: block;
  border-bottom: solid 1px #43434a;
  padding: 5px;
  margin: 0 auto;
  margin-bottom: 10px;
}

.certificate-date {
  width: 45%;
  float: right;
  text-align: center;
  margin-top: 20px;
  color: #888;
}

.certificate-date span {
  display: inline-block;
  border-bottom: solid 1px #43434a;
  font-size: 18px;
  color: #43434a;
  font-weight: 300;
}

.certificate-bottom-border{
  height: 30px;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  background: url(../assets/images/certf-bottom.png) no-repeat;
  background-size: cover;
}

.certificate-caption {
  position: absolute;
  bottom: 35px;
  left: 40px;
  color: #ddd;
  font-size: 22px;
  font-weight: 300;
}

.sucess-sharing-list {
  margin: 30px auto;
  padding: 0;
  display: block;
  list-style-type: none;
  text-align: center;
  li {
    display: inline-block;
    margin-right: 20px;
  }
}

.graph-heading {
  font-weight: 300;
  color: #888;
  font-size: 20px;
  margin: 0 0 0 40px;
}

.scoreboard-square {
  border: solid 1px #4A89DC;
  background: #f8f8f8;
  margin: 0 20px;
  width: 130px;
  height: 70px;
  line-height: 70px;
  text-align: center;
  border-radius: 3px;
  .aquired_point {
    font-size: 37px;
    font-weight: 300;
  }
  .possible_point {
    font-size: 18px;
    font-weight: 300;
    color: #888;
  }
}

.scoreboard {
  margin: 30px;
  height: 150px;
  width: 150px;
  border-radius: 100%;
  border: solid 2px #dcdcdc;
  position: relative;
  .aquired_point {
    top: 0;
    left: -20px;
    position: absolute;
    font-size: 48px;
    font-weight: 300;
    display: block;
    width: 150px;
    text-align: center;
    height: 75px;
    line-height: 75px;
  }
  .possible_point {
    bottom: 0;
    right: -20px;
    position: absolute;
    /* right: 36px; */
    font-size: 36px;
    color: #888;
    display: block;
    width: 150px;
    text-align: center;
    height: 75px;
    line-height: 75px;
  }

  &:after {
    content: '';
    position: absolute;
    top: 0;
    width: 2px;
    height: 100%;
    background: #dcdcdc;
    transform: rotate(60deg);
    left: 72px;
  }
}

.certf {
  padding: 20px;
}

.certf-text {
  color: #dcb457;
  font-weight: 700;
  text-transform: uppercase;
  margin: 5px 0;
}

